--- a/src/pages/contacts.css
+++ b/src/pages/contacts.css
@@ -68,7 +68,7 @@
     .contatos-container {
       margin-top: 30px;
       padding: 10px;
-      width: 85%;
+      width: 80%;
     }
 
     h1 {
