--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -11,7 +11,7 @@
 }
 
 .foreground-image {
-    width: 70%; /* Ensure it fills the entire container */
+    width: 100%; /* Ensure it fills the entire container */
     height: 100%; /* Ensure it covers the entire height of the container */
     border-radius: 0px 80px 80px 0px;
     z-index: 1; /* Ensure the image is above the form */
@@ -107,9 +107,9 @@
     color: #aa8565;
 }
 
-@media (min-width: 320px) and (max-width: 540px) { /* For phones */
+@media (min-width: 320px) and (max-width: 767px) { /* For phones */
     .auth-container {
-        width: 100%;
+        width: 80%;
         height: auto;
         position: relative; /* Position relative for proper handling of content */
         overflow: hidden;
@@ -122,7 +122,7 @@
 
     /* Adjust form box for mobile view */
     .form-box {
-        width: 80%;
+        width: 70%;
         height: auto;
         padding-right: 20px;
         display: block; /* Ensure the form is visible on mobile */
@@ -134,7 +134,7 @@
     .input-group input,
     .submit-btn,
     .toggle-btn {
-        width: 100%;
+        width: 80%;
     }
 
     .toggle-btn {
@@ -194,13 +194,14 @@
 .submit-btn,
 .toggle-btn {
     align-items: center;
-    width: 100%; /* Full width buttons */
+    width: 80%; /* Full width buttons */
     padding: 10px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
+    margin-left: 20px;
     transition: background 0.3s ease;
 }
 
